src/main/java/com/example/demo/error/UserExistException.java
package com.example.demo.error;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;


@ResponseStatus(HttpStatus.NOT_FOUND)
public class UserExistException extends RuntimeException {

	/**
	 * 
	 */
	private static final long serialVersionUID = 5720418567336067971L;

	/**
	 * EXCEPCIÓN PARA NOTIFICAR QUE EL EMAIL INTRODUCIDO YA EXISTE 
	 */
	public UserExistException() {
		super("This email already exists");
	}	

}
